# cheetah

./: .bazelignore  .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  bazel-bin  bazel-cheetah  bazel-out  bazel-testlogs  foo3.txt  notes.txt  package-lock.json  package.json  pnpm-lock.yaml  release.sh  requirements.txt  requirements_lock.txt  tsconfig.json
cheetahweb/: BUILD  manage.py
cheetahweb/cheetahweb/: BUILD  asgi.py  settings.py  urls.py  wsgi.py
exceptions/: BUILD  errors.py
fe/: BUILD  package.json  pnpm-lock.yaml  pnpm-wokspace.yaml  tsconfig.json
fe/connect_node/: BUILD  connect.ts  package.json  server.ts  tsconfig.json
fe/connect_node/proto/: BUILD
fe/deps_lib/: BUILD  importer_rel.ts  tsconfig.json
fe/deps_lib/b/: BUILD
fe/deps_lib_transpiler/: BUILD
fe/deps_lib_transpiler/b/: BUILD
fe/dts_lib/: BUILD  imported_linked.ts  index.ts  tsconfig.json
fe/js_lib/: BUILD
fe/protos/: BUILD  level.proto
fe/simple/: BUILD  foo.ts  tsconfig.json
frontend/: BUILD  app.ts  bead.ts  constants.ts  countdown.ts  emojis.ts  grid.ts  main.ts  package.json  pnpm-lock.yaml  scoreboard.ts  selector.ts  style.css  theme.ts  tscc.spec.json  tsconfig.json  util.ts  webpack_config.js
frontend/protos/: BUILD  level.proto  package.json
frontend/simple/: BUILD  foo.ts
frontend/src/: BUILD  bead.ts  constants.ts  countdown.ts  grid.ts  level_game.ts  levels.ts  scoreboard.ts  selector.ts  storer.ts  theme.ts  util.ts  validation.ts
frontend/static/: index.html  style.css
levels/: levels.proto  levels.textpb
monkey/: BUILD  main.js  package.json  style.css  tsconfig.json  urls.py  views.py
protos/: BUILD  grid.proto  level.proto  move.proto  person.proto
server/: BUILD  alternate_routes.py  conf.py  main.py  move_maker.py  routes.py  style.css  wsgi.py
server/templates/: BUILD  table.html
